--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <link rel="stylesheet" type="text/css"
-    href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-
   <!-- リセットCSS -->
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -177,7 +173,7 @@
                 従来のがん治療は、効果が期待される一方で、免疫力の低下や副作用による体力消耗が伴います。<br>
                 治療を行う中で、患者さまが前向きに治療を続けられるよう、出来る限り副作用を抑え、身体の回復をサポートすることも重要だと考えています。</p>
               <p>
-                この低分子化フコイダンは、九州大学の研究において、がん細胞のアポトーシス（細胞の自然死）、免疫力向上や抗がん剤の効果を高め副作用の軽減するなどの報告があります。
+                この低分子化フコイダンは、九州大学の研究において、がん細胞のアポトーシス（細胞の自然死）、免疫力向上や抗がん剤効果を高め副作用を軽減するなどの報告があります。
               </p>
               <p>
                 がん治療は「治療する」だけでなく、患者さまが安心して治療を続けられるよう心身の負担を軽減し、自分らしく生きることも大切です。
@@ -237,24 +233,24 @@
     </section>
 
     <section class="voice2">
+      <div class="container">
+        <div class="section_title">
+          <img src="img/title_circle1.png" alt="タイトルあしらい">
+          <h3>飲用者の声</h3>
+        </div>
+        <ul class="voice-box">
+          <li><img src="img/voice1.png" alt="声"></li>
+          <li><img src="img/voice2.png" alt="声"></li>
+          <li><img src="img/voice3.png" alt="声"></li>
+          <li><img src="img/voice4.png" alt="声"></li>
 
-      <div class="section_title">
-        <img src="img/title_circle1.png" alt="タイトルあしらい">
-        <h3>飲用者の声</h3>
+        </ul>
       </div>
-      <div class="slick-box">
-        <div class="slick__item"><img src="img/voice1.png" alt="声"></div>
-        <div class="slick__item"><img src="img/voice2.png" alt="声"></div>
-        <div class="slick__item"><img src="img/voice3.png" alt="声"></div>
-        <div class="slick__item"><img src="img/voice4.png" alt="声"></div>
-
-      </div>
-
     </section>
 
     <div class="cv1">
       <picture>
-        <source media="(max-width: 650px)" srcset="img/cv_sp.png">
+        <source media="(max-width: 850px)" srcset="img/cv_sp.png">
         <img src="img/cv_pc.png" alt="画像">
       </picture>
 
@@ -763,18 +759,17 @@
   </main>
   <footer class="top_footer">
     <div class="wrapper">
-    <img src="img/logo.webp" alt="ロゴ">
-    <p class="adress">鹿児島市上之園町21-4ザ・サンクチュアリー上之園1F</p>
-    <div class="footer_link">
-      <a href="tel:0120547025" class="orange">TEL:0120-547-025</a>
-      <a href="mailto:info@tougouiryou.jp" class="orange">mail:info@tougouiryou.jp</a>
+      <img src="img/logo.webp" alt="ロゴ">
+      <p class="adress">鹿児島市上之園町21-4ザ・サンクチュアリー上之園1F</p>
+      <div class="footer_link">
+        <a href="tel:0120547025" class="orange">TEL:0120-547-025</a>
+        <a href="mailto:info@tougouiryou.jp" class="orange">mail:info@tougouiryou.jp</a>
+      </div>
     </div>
-  </div>
     <p class="copy_right">Copyright ©︎ 統合医療と健康を考える会 All right reserved.</p>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
